Description bg color black

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -69,12 +69,21 @@ header {
   text-align: center;
 }
 
+.informacoes-personagem{
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.871), transparent);
+  
+}
+
 .informacoes-personagem .nome-personagem {
   font-size: 20px;
   letter-spacing: 0.3px;
   text-transform: uppercase;
   border-bottom: 2px solid #47f4ff;
+  
+  
 }
+
+
 
 section div p {
   width: 415px;
