--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,6 +43,7 @@ header {
 
 .personagem img:hover {
   box-shadow: 0px 0px 24px 5px #0271f7;
+  cursor: pointer;
 }
 
 .personagens h1 {
@@ -54,6 +55,7 @@ header {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 20px;
+  
 }
 
 .personagens-selecionado {
@@ -82,6 +84,7 @@ header {
 
 section div p {
   width: 415px;
+  margin-top: 5px;
 }
 
 /* Responsive Styles */
